--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -780,7 +780,7 @@ cards:
 
   - heading: Cumulative total cases by area # Cases by area when abstract enabled
     cardType: simpleTableStatic
-    fullWidth: true
+    fullWidth: false
 #    abstract: >
 #      Total numbers of cases over the whole pandemic, and rates per 100,000 resident population 
     download:
@@ -893,6 +893,20 @@ cards:
       - heading: About # {{ DevOnly }} md needs writing and also applying to every other tab.  This is just an example
         tabType: metadata # {{ DevOnly }}
         filename: metadataTabs/cases/cases-and-case-rates-by-area.md # {{ DevOnly }}
+
+  - heading: Weekly cases by local area in England # Cases by area when abstract enabled
+        cardType: simpleExternalStatic
+        fullWidth: false
+        abstract: >
+          View Coronavirus cases by Middle Super Area Output (MSOA)
+        
+        resource: 
+          label: View map
+          url: https://phe.maps.arcgis.com/apps/webappviewer/index.html?id=47574f7a6e454dc6a42c5f6912ed7076
+
+        download:
+          - format: spreadsheet
+            url: https://coronavirus.data.gov.uk/downloads/msoa_data/MSOAs_latest.xlsx
 
   - heading: Cases by date reported, by nation
     cardType: multiAreaStatic
