--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -900,6 +900,12 @@ cards:
     abstract: >
       View Coronavirus cases by Middle Super Area Output (MSOA)
     
+    image: 
+      url: https://c19pubdev.azureedge.net/assets/images/msoa-outline.png
+      alt: >
+        Outline of the Middle Super Area Output (MSOA) map
+        boundaries (not data included)
+
     resource: 
       label: View map
       url: https://phe.maps.arcgis.com/apps/webappviewer/index.html?id=47574f7a6e454dc6a42c5f6912ed7076
