corrects label of MSOA card

--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -903,7 +903,7 @@ cards:
     image: 
       url: https://c19pubdev.azureedge.net/assets/images/msoa-outline.png
       alt: >
-        Outline of the Middle Super Area Output (MSOA) map
+        Outline of the Middle Super Output Area (MSOA) map
         boundaries (not data included)
 
     resource: 
