--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -42,9 +42,9 @@ cards:
     fullWidth: true
     # TODO: PF to check
     abstract: > # {{ DevOnly }} GA added 20200715
-      COVID-19 patients admitted to hospital.  National data are not directly comparable - 
-      see the {indicator definition:genAdmissions} 
-      for more information and latest reported time periods.
+      COVID-19 patients admitted to hospital.  Data are not updated at weekends.  The UK figure is the sum of the four nations' figures and can 
+      only be presented up to the date when all nations' data are available.  National data are not directly comparable - 
+      see the {indicator definition:genAdmissions} for more information.
       
     download:
       - newAdmissions
@@ -109,7 +109,7 @@ cards:
     # removed reference to nations not comparable as only England available
     abstract: > # {{ DevOnly }} GA added 20200715 
       COVID-19 patients admitted to hospital since the start of the pandemic, by age.   
-      See the {indicator definition:cumAdmissions} for more information and latest reported time periods.
+      See the {indicator definition:cumAdmissions} for more information.
       
     download:
       - cumAdmissionsByAge
@@ -164,7 +164,7 @@ cards:
     # removed reference to nations not comparable as only England available.
     abstract: > # {{ DevOnly }} GA added 20200715 
       COVID-19 patients admitted to hospital per 100,000 resident population since the start of the pandemic, by age.  
-      See the {indicator definition:cumAdmissions} for more information and latest reported time periods.
+      See the {indicator definition:cumAdmissions} for more information.
       
     download:
       - cumAdmissionsByAge
@@ -219,9 +219,8 @@ cards:
     fullWidth: true
     # TODO: PF to check
     abstract: > # {{ DevOnly }} GA added 20200715 
-      COVID-19 patients admitted to hospital, by nation.  
-      National data are not directly comparable - see the {indicator definition:genAdmissions} 
-      for more information and latest reported time periods.
+      COVID-19 patients admitted to hospital, by nation.  Data are not updated at weekends.  National data are not directly comparable - 
+      see the {indicator definition:genAdmissions} for more information.
       
     download:
       - newAdmissions
@@ -286,10 +285,11 @@ cards:
     fullWidth: true
     # TODO: PF to check
     abstract: > # {{ DevOnly }} GA added 20200715 
-      COVID-19 patients in hospital.  National data are not directly comparable - 
-      see the {indicator definition:hospitalCases} 
-      for more information and latest reported time periods.
-
+      COVID-19 patients in hospital.  National data may not be directly comparable as data about COVID-19 patients in hospitals 
+      are collected differently across nations.  Data are not updated at weekends and data are not all provided from each nation 
+      every day, so the UK figure presented may lag as it is calculated by summing the four nations' counts - 
+      see the {indicator definition:hospitalCases} for more information.
+     
     download:
       - hospitalCases
 
@@ -328,10 +328,10 @@ cards:
     fullWidth: true
     # TODO: PF to check
     abstract: > # {{ DevOnly }} GA added 20200715 
-      COVID-19 patients in hospital, by area.  National data are not directly comparable - 
-      see the {indicator definition:hospitalCases} 
-      for more information and latest reported time periods.
-      
+      COVID-19 patients in hospital, by area.  National data may not be directly comparable as data about COVID-19 patients in hospitals 
+      are collected differently across nations.  Data are not updated at weekends and data are not all provided from each nation 
+      every day - see the {indicator definition:hospitalCases} for more information.
+     
     download:
       - hospitalCases
     options:
@@ -417,8 +417,10 @@ cards:
     # TODO: PF to check
     abstract: > # {{ DevOnly }} GA added 20200715 
       Mechanical ventilation bed capacity, and occupancy by COVID-19 and non-COVID-19 patients.  
+      Data are not updated at weekends and data are not all provided from each nation every day, 
+      so the UK figure presented may lag as it is calculated by summing the four nations' counts.
       National data are not directly comparable - see the {indicator definition:covidOccupiedMVBeds} 
-      for more information and latest reported time periods.
+      for more information.
 
     download:
       - covidOccupiedMVBeds
@@ -509,9 +511,10 @@ cards:
     fullWidth: true
     # TODO: PF to check
     abstract: > # {{ DevOnly }} GA added 20200715 
-      COVID-19 patients in mechanical ventilation beds, by nation.  National data are not directly comparable - 
-      see the {indicator definition:covidOccupiedMVBeds} 
-      for more information and latest reported time periods.
+      COVID-19 patients in mechanical ventilation beds, by nation.  
+      Data are not updated at weekends and data are not all provided from each nation every day. 
+      National data are not directly comparable - see the {indicator definition:covidOccupiedMVBeds} 
+      for more information.
       
     download:
       - covidOccupiedMVBeds
