--- a/Layouts/deaths.yaml
+++ b/Layouts/deaths.yaml
@@ -15,9 +15,9 @@ cards:
     fullWidth: true
 # TODO: PF to check
     abstract: > # {{ DevOnly }} GA added 20200716 
-      Number of deaths of people who have had a positive test result for COVID-19, by date of death.  
-      National data are not directly comparable - see the {indicator definition:genDeathsByDeathDate} 
-      for more information and latest reported time periods.    
+      Number of deaths of people who had had a positive test result for COVID-19, by date of death. 
+      By definition, the actual cause of death may not be COVID-19 in all cases.  National data are not directly comparable - 
+      see the {indicator definition:genDeathsByDeathDate} for more information.    
 
     download:
       - newDeathsByDeathDate
@@ -75,9 +75,9 @@ cards:
     fullWidth: true
 # TODO: PF to check
     abstract: > # {{ DevOnly }} GA added 20200716 
-      Number of deaths of people who had had a positive test result for COVID-19, by date reported.  
-      National data are not directly comparable - see the {indicator definition:genDeathsByPublishDate} 
-      for more information and latest reported time periods.    
+      Number of deaths of people who had had a positive test result for COVID-19, by date reported. 
+      By definition, the actual cause of death may not be COVID-19 in all cases.  National data are not directly comparable - 
+      see the {indicator definition:genDeathsByPublishDate} for more information.    
 
     download:
       - newDeathsByPublishDate
@@ -138,8 +138,10 @@ cards:
 # TODO: PF to check - just uses latest total - by publish date total should match by death date total but they don't currently match (40461 v 40462 on 16th July)
 # I have linked to the by date of death markdown as the sum of age/sex counts currently presented = 40461.
     abstract: > # {{ DevOnly }} GA added 20200716 - only available for England so removed national comparator comment
-      Number of deaths of people who had had a positive test result for COVID-19 since the start of the pandemic, by age and sex.  
-      See the {indicator definition:cumDeathsByDeathDate} for more information and latest reported time periods.    
+      Number of deaths of people who had had a positive test result for COVID-19 
+      since the start of the pandemic, by age and sex.  
+      By definition, the actual cause of death may not be COVID-19 in all cases.   
+      See the {indicator definition:cumDeathsByDeathDate} for more information.    
 
     download:
       - femaleDeaths
@@ -211,8 +213,10 @@ cards:
 # TODO: PF to check - just uses latest total - by publish date total should match by death date total but they don't currently match (40461 v 40462 on 16th July)
 # I have linked to the by date of death markdown as the sum of age/sex counts currently presented = 40461.
     abstract: > # {{ DevOnly }} GA added 20200716 - only available for England so removed national comparator comment
-      Number of deaths of people who had had a positive test result for COVID-19 since the start of the pandemic per 100,000 resident population, by age and sex.  
-      See the {indicator definition:cumDeathsByDeathDate} for more information and latest reported time periods.    
+      Number of deaths of people who had had a positive test result for COVID-19 since the 
+      start of the pandemic per 100,000 resident population, by age and sex.  
+      By definition, the actual cause of death may not be COVID-19 in all cases.   
+      See the {indicator definition:cumDeathsByDeathDate} for more information.    
 
     download:
       - femaleDeaths
@@ -283,8 +287,9 @@ cards:
 # I have linked to the by reporting date markdown as the sum of age/sex counts currently presented = 40462.
     abstract: > # {{ DevOnly }} GA added 20200716
       Number of deaths since the start of the pandemic of people who had had a positive test result for COVID-19, 
-      and equivalent rates per 100,000 resident population, by area.  National data are not directly comparable - 
-      see the {indicator definition:cumDeathsByPublishDate} for more information and latest reported time periods.    
+      and equivalent rates per 100,000 resident population, by area.  By definition, the actual cause of death may 
+      not be COVID-19 in all cases.  National data are not directly comparable - 
+      see the {indicator definition:cumDeathsByPublishDate} for more information.    
 
     download:
       - cumDeathsByPublishDate
@@ -390,6 +395,7 @@ cards:
             value: cumDeathsByPublishDateRate # {{ DevOnly }}
             type: numeric # {{ DevOnly }}
             tooltip: Death rate per 100,000 resident population # {{ DevOnly }}
+
 # TODO: GA to write and reference md file
       - heading: More information # {{ DevOnly }} Markdown needs writing and then implementing similar across site
         tabType: metadata # {{ DevOnly }}
@@ -401,8 +407,9 @@ cards:
 # TODO: PF to check
     abstract: > # {{ DevOnly }} GA added 20200716
       Number of deaths of people who had had a positive test result for COVID-19, by date reported, by nation.  
+      By definition, the actual cause of death may not be COVID-19 in all cases.  
       National data are not directly comparable - see the {indicator definition:genDeathsByPublishDate} 
-      for more information and latest reported time periods.    
+      for more information.    
 
     download:
       - newDeathsByPublishDate
